0.0.5 (Pending)
* Changed: The documentation indicated that the iml.local_repository_env_override value
  defaulted to nil while the code defaulted the value to M2_REPO. The code was changed to
  match the documentation.
* Added: Ability to disable generation of content section using iml.skip_content!
* Fixed: A project which is tagged with no_iml may have a child with an IML.

0.0.4 (May 29, 2010)
* Added: Ability to disable ipr generation using project.no_ipr
* Added: Documented the ability to disable the generation of iml files via project.no_iml 